# juno-intents

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  deployments.json  go.mod  go.sum
.github/workflows/: ci.yml  e2e-devnet.yml  groth16.yml
cmd/crp-monitor/: main.go  main_test.go
cmd/crp-operator/: main.go  main_test.go  once_test.go  registry.go  registry_test.go
cmd/juno-intents/: iep_pdas.go  iep_tx.go  init.go  main.go  main_test.go  orp.go  orp_test.go  pda.go  receipt_inputs.go  risc0.go  validate_image_ids.go
cmd/nitro-operator/: io.go  main.go
cmd/nitro-operator-enclave/: main.go  seal.go  state.go
cmd/solvernet/: main.go
enclave/operator/: Dockerfile  Dockerfile.e2e
infra/terraform/nitro-operator/: main.tf  outputs.tf  variables.tf
internal/shelltest/: aws_e2e_devnet_testnet_script_test.go  aws_e2e_devnet_testnet_test.go  e2e_devnet_testnet_script_test.go  e2e_devnet_workflow_test.go  junocash_up_scripts_test.go  tee_funding_scripts_test.go
internal/vsock/: vsock.go
offchain/deployments/: registry.go  registry_test.go
offchain/helius/: client.go  client_test.go
offchain/iep/: iep.go  iep_test.go
offchain/junocashcli/: client.go  client_test.go
offchain/nitro/: client.go  types.go
offchain/solana/: address_lookup_table.go  address_lookup_table_test.go  instructions.go  instructions_test.go  pda.go  pda_test.go  pubkey.go  shortvec.go  shortvec_test.go  tx.go  tx_parse.go  tx_parse_test.go  tx_test.go  tx_v0.go  tx_v0_test.go
offchain/solanafees/: fees.go  fees_test.go
offchain/solanarpc/: client.go  client_test.go
offchain/solvernet/: aggregate.go  aggregate_test.go  announcement.go  client.go  codec.go  http.go  http_client_test.go  keypair.go  keypair_gen.go  keypair_gen_test.go  quote.go  solver.go  solvernet_test.go  strategy.go  strategy_test.go
protocol/: bytes32.go  checkpoints.go  deployment.go  fees.go  fees_test.go  prefix.go  receipt_journal.go  receipt_journal_test.go  receipts.go  solvernet.go  solvernet_test.go  testvectors_v1_test.go  types.go
risc0/attestation/: Cargo.toml
risc0/attestation/host/: Cargo.toml
risc0/attestation/host/src/: lib.rs
risc0/attestation/logic/: Cargo.toml
risc0/attestation/logic/src/: lib.rs
risc0/attestation/logic/testdata/: attestation.cose.hex
risc0/attestation/methods/: Cargo.toml  build.rs
risc0/attestation/methods/guest/: Cargo.toml
risc0/attestation/methods/guest/src/: main.rs
risc0/receipt/: Cargo.toml
risc0/receipt/host/: Cargo.toml
risc0/receipt/host/src/: lib.rs
risc0/receipt/host/tests/: groth16_bundle.rs  groth16_real_witness.rs  smoke.rs
risc0/receipt/logic/: Cargo.toml
risc0/receipt/logic/src/: lib.rs
risc0/receipt/methods/: Cargo.toml  build.rs
risc0/receipt/methods/guest/: Cargo.toml
risc0/receipt/methods/guest/src/: main.rs
scripts/aws/: build-eif.sh  crp-regtest-submit-finalize.sh  devnet-airdrop.sh  e2e-devnet-testnet.sh  prove-groth16.sh  provision-nitro-operator-key.sh  smoke-nitro-operator.sh
scripts/berkeleydb/: install-db-dump.sh
scripts/e2e/: devnet-testnet-tee.sh  devnet-testnet.sh  tee-preflight.sh
scripts/enclave/: build-eif.sh
scripts/gh/: update-receipt-witness-secret.sh
scripts/junocash/: fetch-linux64.sh
scripts/junocash/regtest/: Dockerfile  cli.sh  down.sh  mk-fixture.sh  up.sh  witness-hex.sh
scripts/junocash/testnet/: cli.sh  down.sh  mine.sh  mk-fixture.sh  up.sh  witness-hex.sh
scripts/release/: eif.sh
scripts/solana/: deploy-risc0-verifier.sh  deploy.sh  validate-deployment-image-ids.sh
solana/: Cargo.toml
solana/checkpoint-registry/: Cargo.toml
solana/checkpoint-registry/src/: lib.rs
solana/checkpoint-registry/tests/: basic.rs
solana/intent-escrow/: Cargo.toml
solana/intent-escrow/src/: lib.rs
solana/intent-escrow/tests/: basic.rs  e2e_risc0_groth16_settle.rs  e2e_two_direction_flow.rs
solana/operator-registry/: Cargo.toml
solana/operator-registry/src/: lib.rs
solana/operator-registry/tests/: e2e_risc0_groth16_register.rs
solana/receipt-verifier/: Cargo.toml
solana/receipt-verifier/src/: lib.rs
solana/receipt-verifier/tests/: e2e_risc0_groth16_bundle.rs
zk/receipt/: bundle.go  bundle_test.go  prover.go  prover_test.go  witness.go  witness_encoding.go  witness_encoding_test.go  witness_test.go  zkvm_bundle.go  zkvm_bundle_test.go
