[package]
name = "juno-intents-intent-escrow"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.10.3"
juno-intents-checkpoint-registry = { path = "../checkpoint-registry" }
solana-program = "2"
spl-token = "8.0.0"

[dev-dependencies]
hex = "0.4.3"
solana-program-test = "2"
solana-sdk = "2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
