[package]
name = "juno-receipt-host"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
cuda = ["risc0-zkvm/cuda"]

[dependencies]
anyhow = "1.0.86"
juno-receipt-methods = { path = "../methods" }
risc0-zkvm = { version = "3.0.4", default-features = false, features = ["prove"] }
tracing = "0.1.44"

[dev-dependencies]
sha2 = "0.10.8"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
orchard = { version = "0.12.0", default-features = false, features = ["std"] }
juno-receipt-logic = { path = "../logic" }
