[package]
name = "juno-receipt-host"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
cuda = ["risc0-zkvm/cuda"]

[dependencies]
anyhow = "1.0.86"
bech32 = "0.11.0"
bridgetree = "0.7.0"
byteorder = "1.5.0"
clap = { version = "4.5.32", features = ["derive"] }
f4jumble = "0.1.1"
hex = "0.4.3"
juno-receipt-logic = { path = "../logic" }
juno-receipt-methods = { path = "../methods" }
incrementalmerkletree = "0.8.2"
orchard = { version = "0.11.0", default-features = false, features = ["std"] }
risc0-zkvm = { version = "3.0.4", default-features = false, features = ["prove"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
tracing = "0.1.44"
zcash_encoding = "0.3.0"
zcash_primitives = "0.26.4"
zcash_protocol = "0.7.2"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
